// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShoppingList > displaying a list > when the list is not editable > matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="_root_62bc73"
        style="--scheme-color: #00a323; --border-color: #00821c; --text-color-primary: #fff; --text-color-secondary: #fff; --hover-color: #00921f; --scheme-color-lighter: #32b54e; --scheme-color-lightest: #ccecd3;"
      >
        <div
          aria-controls="list3Details"
          aria-expanded="false"
          class="_trigger_62bc73"
          role="button"
        >
          <span
            class="_icons_62bc73"
          >
            <button
              class="_icon_62bc73"
              data-testid="destroyShoppingList3"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-xmark _fa_62bc73"
                data-icon="xmark"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </span>
          <h3
            class="_title_62bc73"
          >
            My Shopping List
          </h3>
        </div>
        <div
          aria-hidden="true"
          class="rah-static rah-static--height-zero "
          id="list3Details"
          style="height: 0px; overflow: hidden;"
        >
          <div
            style="display: none;"
          >
            <div
              class="_details_62bc73"
            >
              <p
                class="_emptyList_62bc73"
              >
                This shopping list has no list items.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="_root_62bc73"
      style="--scheme-color: #00a323; --border-color: #00821c; --text-color-primary: #fff; --text-color-secondary: #fff; --hover-color: #00921f; --scheme-color-lighter: #32b54e; --scheme-color-lightest: #ccecd3;"
    >
      <div
        aria-controls="list3Details"
        aria-expanded="false"
        class="_trigger_62bc73"
        role="button"
      >
        <span
          class="_icons_62bc73"
        >
          <button
            class="_icon_62bc73"
            data-testid="destroyShoppingList3"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-xmark _fa_62bc73"
              data-icon="xmark"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"
                fill="currentColor"
              />
            </svg>
          </button>
        </span>
        <h3
          class="_title_62bc73"
        >
          My Shopping List
        </h3>
      </div>
      <div
        aria-hidden="true"
        class="rah-static rah-static--height-zero "
        id="list3Details"
        style="height: 0px; overflow: hidden;"
      >
        <div
          style="display: none;"
        >
          <div
            class="_details_62bc73"
          >
            <p
              class="_emptyList_62bc73"
            >
              This shopping list has no list items.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ShoppingList > displaying a list > when there are list items > matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="_root_62bc73"
        style="--scheme-color: #00a323; --border-color: #00821c; --text-color-primary: #fff; --text-color-secondary: #fff; --hover-color: #00921f; --scheme-color-lighter: #32b54e; --scheme-color-lightest: #ccecd3;"
      >
        <div
          aria-controls="list4Details"
          aria-expanded="false"
          class="_trigger_62bc73"
          role="button"
        >
          <span
            class="_icons_62bc73"
          >
            <button
              class="_icon_62bc73"
              data-testid="destroyShoppingList4"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-xmark _fa_62bc73"
                data-icon="xmark"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </span>
          <h3
            class="_title_62bc73"
          >
            My Shopping List
          </h3>
        </div>
        <div
          aria-hidden="true"
          class="rah-static rah-static--height-zero "
          id="list4Details"
          style="height: 0px; overflow: hidden;"
        >
          <div
            style="display: none;"
          >
            <div
              class="_details_62bc73"
            >
              <div
                class="_root_fccc8d"
                style="--main-color: #32b54e; --title-text-color: #fff; --border-color: #00821c; --body-background-color: #ccecd3; --body-text-color: #00410e; --hover-color: #19ac38;"
              >
                <div
                  aria-controls="shoppingListItem1Details"
                  aria-expanded="false"
                  class="_trigger_fccc8d"
                  role="button"
                >
                  <span
                    class="_descriptionContainer_fccc8d"
                  >
                    <h3
                      class="_description_fccc8d"
                    >
                      List Item 1
                    </h3>
                  </span>
                  <span
                    class="_quantity_fccc8d"
                  >
                    4
                  </span>
                </div>
                <div
                  aria-hidden="true"
                  class="rah-static rah-static--height-zero "
                  id="shoppingListItem1Details"
                  style="height: 0px; overflow: hidden;"
                >
                  <div
                    style="display: none;"
                  >
                    <div
                      class="_details_fccc8d"
                    >
                      <h4
                        class="_label_fccc8d"
                      >
                        Unit Weight:
                      </h4>
                      <p
                        class="_value_fccc8d"
                      >
                        -
                      </p>
                      <h4
                        class="_label_fccc8d"
                      >
                        Notes:
                      </h4>
                      <p
                        class="_value_fccc8d"
                      >
                        -
                      </p>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="_root_fccc8d"
                style="--main-color: #32b54e; --title-text-color: #fff; --border-color: #00821c; --body-background-color: #ccecd3; --body-text-color: #00410e; --hover-color: #19ac38;"
              >
                <div
                  aria-controls="shoppingListItem2Details"
                  aria-expanded="false"
                  class="_trigger_fccc8d"
                  role="button"
                >
                  <span
                    class="_descriptionContainer_fccc8d"
                  >
                    <h3
                      class="_description_fccc8d"
                    >
                      List Item 2
                    </h3>
                  </span>
                  <span
                    class="_quantity_fccc8d"
                  >
                    1
                  </span>
                </div>
                <div
                  aria-hidden="true"
                  class="rah-static rah-static--height-zero "
                  id="shoppingListItem2Details"
                  style="height: 0px; overflow: hidden;"
                >
                  <div
                    style="display: none;"
                  >
                    <div
                      class="_details_fccc8d"
                    >
                      <h4
                        class="_label_fccc8d"
                      >
                        Unit Weight:
                      </h4>
                      <p
                        class="_value_fccc8d"
                      >
                        -
                      </p>
                      <h4
                        class="_label_fccc8d"
                      >
                        Notes:
                      </h4>
                      <p
                        class="_value_fccc8d"
                      >
                        -
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="_root_62bc73"
      style="--scheme-color: #00a323; --border-color: #00821c; --text-color-primary: #fff; --text-color-secondary: #fff; --hover-color: #00921f; --scheme-color-lighter: #32b54e; --scheme-color-lightest: #ccecd3;"
    >
      <div
        aria-controls="list4Details"
        aria-expanded="false"
        class="_trigger_62bc73"
        role="button"
      >
        <span
          class="_icons_62bc73"
        >
          <button
            class="_icon_62bc73"
            data-testid="destroyShoppingList4"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-xmark _fa_62bc73"
              data-icon="xmark"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"
                fill="currentColor"
              />
            </svg>
          </button>
        </span>
        <h3
          class="_title_62bc73"
        >
          My Shopping List
        </h3>
      </div>
      <div
        aria-hidden="true"
        class="rah-static rah-static--height-zero "
        id="list4Details"
        style="height: 0px; overflow: hidden;"
      >
        <div
          style="display: none;"
        >
          <div
            class="_details_62bc73"
          >
            <div
              class="_root_fccc8d"
              style="--main-color: #32b54e; --title-text-color: #fff; --border-color: #00821c; --body-background-color: #ccecd3; --body-text-color: #00410e; --hover-color: #19ac38;"
            >
              <div
                aria-controls="shoppingListItem1Details"
                aria-expanded="false"
                class="_trigger_fccc8d"
                role="button"
              >
                <span
                  class="_descriptionContainer_fccc8d"
                >
                  <h3
                    class="_description_fccc8d"
                  >
                    List Item 1
                  </h3>
                </span>
                <span
                  class="_quantity_fccc8d"
                >
                  4
                </span>
              </div>
              <div
                aria-hidden="true"
                class="rah-static rah-static--height-zero "
                id="shoppingListItem1Details"
                style="height: 0px; overflow: hidden;"
              >
                <div
                  style="display: none;"
                >
                  <div
                    class="_details_fccc8d"
                  >
                    <h4
                      class="_label_fccc8d"
                    >
                      Unit Weight:
                    </h4>
                    <p
                      class="_value_fccc8d"
                    >
                      -
                    </p>
                    <h4
                      class="_label_fccc8d"
                    >
                      Notes:
                    </h4>
                    <p
                      class="_value_fccc8d"
                    >
                      -
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="_root_fccc8d"
              style="--main-color: #32b54e; --title-text-color: #fff; --border-color: #00821c; --body-background-color: #ccecd3; --body-text-color: #00410e; --hover-color: #19ac38;"
            >
              <div
                aria-controls="shoppingListItem2Details"
                aria-expanded="false"
                class="_trigger_fccc8d"
                role="button"
              >
                <span
                  class="_descriptionContainer_fccc8d"
                >
                  <h3
                    class="_description_fccc8d"
                  >
                    List Item 2
                  </h3>
                </span>
                <span
                  class="_quantity_fccc8d"
                >
                  1
                </span>
              </div>
              <div
                aria-hidden="true"
                class="rah-static rah-static--height-zero "
                id="shoppingListItem2Details"
                style="height: 0px; overflow: hidden;"
              >
                <div
                  style="display: none;"
                >
                  <div
                    class="_details_fccc8d"
                  >
                    <h4
                      class="_label_fccc8d"
                    >
                      Unit Weight:
                    </h4>
                    <p
                      class="_value_fccc8d"
                    >
                      -
                    </p>
                    <h4
                      class="_label_fccc8d"
                    >
                      Notes:
                    </h4>
                    <p
                      class="_value_fccc8d"
                    >
                      -
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ShoppingList > displaying a list > when there are no list items > matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="_root_62bc73"
        style="--scheme-color: #00a323; --border-color: #00821c; --text-color-primary: #fff; --text-color-secondary: #fff; --hover-color: #00921f; --scheme-color-lighter: #32b54e; --scheme-color-lightest: #ccecd3;"
      >
        <div
          aria-controls="list4Details"
          aria-expanded="false"
          class="_trigger_62bc73"
          role="button"
        >
          <span
            class="_icons_62bc73"
          >
            <button
              class="_icon_62bc73"
              data-testid="destroyShoppingList4"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-xmark _fa_62bc73"
                data-icon="xmark"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 320 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </span>
          <h3
            class="_title_62bc73"
          >
            My Shopping List
          </h3>
        </div>
        <div
          aria-hidden="true"
          class="rah-static rah-static--height-zero "
          id="list4Details"
          style="height: 0px; overflow: hidden;"
        >
          <div
            style="display: none;"
          >
            <div
              class="_details_62bc73"
            >
              <p
                class="_emptyList_62bc73"
              >
                This shopping list has no list items.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="_root_62bc73"
      style="--scheme-color: #00a323; --border-color: #00821c; --text-color-primary: #fff; --text-color-secondary: #fff; --hover-color: #00921f; --scheme-color-lighter: #32b54e; --scheme-color-lightest: #ccecd3;"
    >
      <div
        aria-controls="list4Details"
        aria-expanded="false"
        class="_trigger_62bc73"
        role="button"
      >
        <span
          class="_icons_62bc73"
        >
          <button
            class="_icon_62bc73"
            data-testid="destroyShoppingList4"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-xmark _fa_62bc73"
              data-icon="xmark"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 320 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"
                fill="currentColor"
              />
            </svg>
          </button>
        </span>
        <h3
          class="_title_62bc73"
        >
          My Shopping List
        </h3>
      </div>
      <div
        aria-hidden="true"
        class="rah-static rah-static--height-zero "
        id="list4Details"
        style="height: 0px; overflow: hidden;"
      >
        <div
          style="display: none;"
        >
          <div
            class="_details_62bc73"
          >
            <p
              class="_emptyList_62bc73"
            >
              This shopping list has no list items.
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
